dist/1.0/bin/sample/retrieveUnpackaged/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Another_Product_Specific_Information__c</fullName>
        <description>Field to set value of Gross Margin connected with specific product: Equipment and Software</description>
        <inlineHelpText>Field to set value of Gross Margin connected with specific product: Equipment and Software</inlineHelpText>
        <label>Another Product Specific Information</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <description>Relation to Asset. Asset object is not used - deprecated.</description>
        <inlineHelpText>Relation to Asset. Asset object is not used - deprecated.</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if line has already been assigned to Order</description>
        <inlineHelpText>Indicates if line has already been assigned to Order</inlineHelpText>
        <label>Assigned to Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Link to Billing Account related to added Service Bundle</description>
        <formula>HYPERLINK(&apos;/&apos;+ Service_Bundle__r.Billing_Account__c , Service_Bundle__r.Billing_Account__r.Name , &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing Account of chosen Service Bundle</inlineHelpText>
        <label>Billing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Name__c</fullName>
        <description>Bundle Name which corresponds to the one selected in Extranet</description>
        <formula>CASE( Opportunity.GTS_Location__c ,
&quot;GTS Poland&quot;, Bundle__r.Label_POL__c,
&quot;GTS Hungary&quot;,Bundle__r.Label_HUN__c,
&quot;GTS Romania&quot;, Bundle__r.Label_ROU__c,
&quot;GTS Czech Rep&quot;, Bundle__r.Label_CZE__c,
&quot;GTS Slovakia &quot;, Bundle__r.Label_SVK__c,
null)</formula>
        <inlineHelpText>Bundle Name which corresponds to the one selected in Extranet</inlineHelpText>
        <label>Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Bundle relation. Filled in by Extranet.</description>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_COLO_Product_definition__c</fullName>
        <description>created by Martin Slaby, 2011-06-10 11:05 on Test</description>
        <label>Ce-Colo Product Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CancellationAmount__c</fullName>
        <description>Amount of Cancelled Order</description>
        <inlineHelpText>Amount of Cancelled Order</inlineHelpText>
        <label>Cancellation Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_in_provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated cancellation during provisioning after sales documents are signed.</description>
        <inlineHelpText>Indicated cancellation during provisioning after sales documents are signed.</inlineHelpText>
        <label>Cancelled Prov.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_in_provisioning_date__c</fullName>
        <description>Date when line was marked as Cancelled Prov.</description>
        <inlineHelpText>Date when line was marked as Cancelled Prov.</inlineHelpText>
        <label>Cancelled Prov. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capex_One_off__c</fullName>
        <description>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</description>
        <inlineHelpText>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</inlineHelpText>
        <label>Capex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex__c</fullName>
        <description>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</description>
        <inlineHelpText>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</inlineHelpText>
        <label>Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_backbone__c</fullName>
        <description>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</description>
        <inlineHelpText>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</inlineHelpText>
        <label>Capex (backbone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_last_mile__c</fullName>
        <description>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</description>
        <inlineHelpText>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</inlineHelpText>
        <label>Capex (last mile)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Flow__c</fullName>
        <description>Proposal Revenue - (Opex One–off + Opex Monthly* Contract Length) - Total Capex</description>
        <formula>Proposal_Revenue__c  - (Opex_One_off__c +  Opex_Monthly__c * Length_of_Contract_Months__c)</formula>
        <inlineHelpText>Proposal Revenue - (Opex One–off + Opex Monthly* Contract Length) - Total Capex</inlineHelpText>
        <label>Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CeColo_AC_A__c</fullName>
        <label>AC (A)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CeColo_Product_definition__c</fullName>
        <label>Product definition</label>
        <picklist>
            <picklistValues>
                <fullName>Antenna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinet 1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinet 1/3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinet Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hands &amp; Eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space - car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space - colocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space - office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space - storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - DC product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Non DC product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CeColo_Site__c</fullName>
        <description>Created by Martin Slaby, 2011-08-02 07:48 on Test</description>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>CZ Brno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Infigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Koksární</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Nagano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Sitel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Vinohradská</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Budaörs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Hauszmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Viktor Hugo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL Piaseczno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL Piekna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO Bucharest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SK Bratislava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DC_a__c</fullName>
        <label>DC (A)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Primary use for AOM integration for Hungary.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Difference_in_Amount__c</fullName>
        <description>Difference in Amount from relevant Request</description>
        <inlineHelpText>Difference in Amount from relevant Request</inlineHelpText>
        <label>Difference in Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distance_Zone__c</fullName>
        <label>Distance Zone</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Monthly_Recurring_Price__c</fullName>
        <description>First Monthly Recurring Price - first non zero value in MRP filed is copied here</description>
        <inlineHelpText>First Monthly Recurring Price - first non zero value in MRP filed is copied here</inlineHelpText>
        <label>First Monthly Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GTS_Localisations__c</fullName>
        <description>International Retail specific. Deprecated, not used</description>
        <inlineHelpText>International Retail specific. Deprecated, not used</inlineHelpText>
        <label>GTS Localizations</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Datanet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Energis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Nextra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Novera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Telecom</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Proposal Revenue - (Opex One-off + Opex Monthly*Contract Length)</description>
        <formula>Proposal_Revenue__c  - (Opex_One_off__c + Opex_Monthly__c *Length_of_Contract_Months__c)</formula>
        <inlineHelpText>Proposal Revenue - (Opex One-off + Opex Monthly*Contract Length)</inlineHelpText>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Include_in_Revenue__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When marked then amount will be included in MRD</description>
        <inlineHelpText>When marked then amount will be included in MRD</inlineHelpText>
        <label>In Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increamental_Monthly_Revenue__c</fullName>
        <description>Incremental Monthly Revenue = MRP - Old MRP + MU - Old MU</description>
        <formula>Monthly_Fee__c -Old_Monthly_Recurring_Price__c+ Monthly_Usage__c - Old_Monthly_Usage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Incremental Monthly Revenue = MRP - Old MRP + MU - Old MU</inlineHelpText>
        <label>Increamental Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_Fee__c</fullName>
        <description>Non Recurring Price</description>
        <inlineHelpText>Non Recurring Price - onetime charge that customer will have to pay for service</inlineHelpText>
        <label>New Non Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <description>Integration specific. Stores data Date/Time</description>
        <inlineHelpText>Integration specific. Stores data Date/Time</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length_of_Contract_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Length of Contract in months</description>
        <inlineHelpText>Expected Length of Contract in months</inlineHelpText>
        <label>Contract Length [months]</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <description>Identifies type of action related to selected Product (New Installation, Modification, etc.)</description>
        <inlineHelpText>Identifies type of action related to selected Product (New Installation, Modification, etc.)</inlineHelpText>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numbers Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Numbers Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Line of Business as defined on Product</description>
        <formula>PricebookEntry.Product2.Line_of_Business__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Line of Business as defined on Product</inlineHelpText>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Product_Name__c</fullName>
        <description>Name of local product as identified within local CRM system</description>
        <inlineHelpText>Enter name of local product as identified within local CRM system</inlineHelpText>
        <label>Local Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRD_in_dec__c</fullName>
        <formula>IF(  Monthly_Revenue_Delta__c&gt;0, &quot;Increase&quot;, IF(  Monthly_Revenue_Delta__c&lt;0, &quot;Decrease&quot;, IF(  Monthly_Revenue_Delta__c=0, &quot;No change&quot;,null )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Increase, Decrease, No change</inlineHelpText>
        <label>MRD(+/-)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimal_Monthly_Usage__c</fullName>
        <description>Voice Services ONLY
Monthly Minimal Usage – Contracted minimal monthly usage</description>
        <inlineHelpText>Voice Services ONLY
Monthly Minimal Usage – Contracted minimal monthly usage</inlineHelpText>
        <label>New Minimal Monthly Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <description>Monthly Recurring Price</description>
        <inlineHelpText>Monthly Recurring Price that customer will pay for service</inlineHelpText>
        <label>New Monthly Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Delta_MMU__c</fullName>
        <description>Monthly Revenue Delta where voice part is based only on Monthly Minimal Usage</description>
        <formula>Monthly_Fee__c - Old_Monthly_Recurring_Price__c + Minimal_Monthly_Usage__c  - Old_Minimal_Monthly_Usage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Revenue Delta where voice part is based only on Monthly Minimal Usage
MRP – Old MRP + MMU – Old MMU</inlineHelpText>
        <label>Monthly Revenue Delta (MMU)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Delta__c</fullName>
        <description>Monthly Revenue Delta with Monthly Usage</description>
        <formula>Monthly_Fee__c  - Old_Monthly_Recurring_Price__c  + Monthly_Usage__c - Old_Monthly_Usage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Revenue Delta with Monthly Usage
MRP – Old MRP + MU - Old MU</inlineHelpText>
        <label>Monthly Revenue Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <description>Monthly Revenue = MRP + MU</description>
        <formula>Monthly_Usage__c + Monthly_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Revenue = MRP + MU</inlineHelpText>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Usage__c</fullName>
        <description>Monthly Usage</description>
        <inlineHelpText>Voice Services ONLY
Monthly Usage – estimated total monthly usage (includes minimal usage)</inlineHelpText>
        <label>New Monthly Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRP_Contract_Lenght__c</fullName>
        <description>field is used to calculate sales commissions 
when Non recurring price is greater than or equal 3x(Monthly Recurring Price - Old Monthly Recurring Price) we should divide Non Recurring price by Contract Length and add that value to MRD</description>
        <formula>IF(Length_of_Contract_Months__c=0, 0, IF( Installation_Fee__c &lt;  3 * ( Monthly_Fee__c  - Old_Monthly_Recurring_Price__c ) , 0, Installation_Fee__c  / Length_of_Contract_Months__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Non Recurring Price/Contract Length</inlineHelpText>
        <label>NRP/Contract Lenght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Minimal_Monthly_Usage__c</fullName>
        <description>Old Minimal Monthly Usage</description>
        <inlineHelpText>Voice Services ONLY
Old Monthly Minimal Usage</inlineHelpText>
        <label>Old Minimal Monthly Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Monthly_Recurring_Price__c</fullName>
        <description>Old Monthly Recurring Price</description>
        <inlineHelpText>Currently paid monthly fee by customer.</inlineHelpText>
        <label>Old Monthly Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Monthly_Usage__c</fullName>
        <description>Old Monthly Usage</description>
        <inlineHelpText>Voice Services ONLY
Estimated current Monthly Usage (before change)</inlineHelpText>
        <label>Old Monthly Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <description>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</description>
        <inlineHelpText>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</inlineHelpText>
        <label>Opex Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off__c</fullName>
        <description>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</description>
        <inlineHelpText>Derived from related Requests which are not cancelled and have checked Include into Amount checkbox</inlineHelpText>
        <label>Opex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Power_Description__c</fullName>
        <label>Power Description</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Revenue__c</fullName>
        <description>NRP+MRP*Contract Length of releveant Requets (included into amount and not cancelled)</description>
        <formula>Installation_Fee__c   + Monthly_Fee__c * Length_of_Contract_Months__c</formula>
        <inlineHelpText>NRP+MRP*Contract Length (included into amount and not cancelled)</inlineHelpText>
        <label>Proposal Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for for Disconnection or Suspension of service</description>
        <inlineHelpText>Reason for for Disconnection or Suspension of service</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <controllingField>Line_Type__c</controllingField>
            <picklistValues>
                <fullName>Billing problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad technical support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low network capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No network coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad sales care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad customer care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient service features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbeatable price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile converged offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other technology preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving to competitor area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doubled billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer needed service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated by GTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIVS planned churn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason not told</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service administrative closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-user disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downsizing business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building own infrastructure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Renewal can be used only with Upgrade, Downgrade, Price Change</description>
        <inlineHelpText>Renewal can be used only with Upgrade, Downgrade, Price Change</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Deprecated. Not used</description>
        <inlineHelpText>Deprecated. Not used</inlineHelpText>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Selected Installed Product</description>
        <inlineHelpText>Selected Installed Product</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>CZ Brno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Infigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Koksární</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Nagano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Sitel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ Vinohradská</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Budaörs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Hauszmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Victor Hugo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL Piaseczno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL Piekna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO Bucharest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SK Bratislava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Id of record as in source system</description>
        <inlineHelpText>Id of record as in source system</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Service_Bundle__c</fullName>
        <description>Service Bundle which is the source of the numbers to be transfered to Target Service</description>
        <inlineHelpText>Service Bundle which is the source of the numbers to be transfered to Target Service</inlineHelpText>
        <label>Source Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Opportunity Product (Source Service Bundle)</relationshipLabel>
        <relationshipName>Opportunity_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System_Id_del__c</fullName>
        <description>id of source system</description>
        <inlineHelpText>id of source system</inlineHelpText>
        <label>Source System Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Expected Service Activation Date</description>
        <inlineHelpText>Enter Expected Service Activation Date = Planned Start Billing Date</inlineHelpText>
        <label>Exp. Service Activ.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Capex__c</fullName>
        <description>Capex one-off+Capex</description>
        <formula>Capex_One_off__c + Capex__c</formula>
        <inlineHelpText>Capex one-off+Capex</inlineHelpText>
        <label>Total Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incremental_Revenue__c</fullName>
        <description>Total Incremental Revenue = NRP + Contract Length *(MRP-Old MRP +MU - Old MU)</description>
        <formula>Installation_Fee__c + Length_of_Contract_Months__c *( Monthly_Fee__c - Old_Monthly_Recurring_Price__c + Monthly_Usage__c -Old_Monthly_Usage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Incremental Revenue = NRP + Contract Length *(MRP-Old MRP +MU - Old MU)</inlineHelpText>
        <label>Total Incremental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Fee__c</fullName>
        <description>Quantity * UnitPrice</description>
        <formula>Quantity  *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity * UnitPrice</inlineHelpText>
        <label>Total Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <description>Total Revenue = NRP + Contract Length x (MRP + MU)</description>
        <formula>Installation_Fee__c + Length_of_Contract_Months__c *( Monthly_Fee__c + Monthly_Usage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Revenue = NRP + Contract Length x (MRP + MU)</inlineHelpText>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>